# PyFFMPEG

./: .coverage  .coveragerc  .gitignore  .post-commit-test  ACTIVE_DOCUMENTATION.md  ANALYSIS_EXECUTIVE_SUMMARY.txt  ANALYSIS_SCOPE_AND_FILES.md  ANY_WARNINGS_QUICK_REFERENCE.md  ARCHITECTURAL_ANALYSIS.md  ARCHITECTURE_EXPLORATION_REPORT.md  ARCHITECTURE_REVIEW.md  ARCHIVE_SUMMARY_2025-11-01.md  AUDIT_SUMMARY.txt  AUTO_PUSH_SYSTEM.md  BASEDPYRIGHT_MIGRATION_PLAN.md  BASEDPYRIGHT_RESULTS.md  BEST_PRACTICES_CHECKLIST.md  BEST_PRACTICES_DETAILED_EXAMPLES.md  BEST_PRACTICES_INDEX.md  BEST_PRACTICES_QUICK_REFERENCE.md  BEST_PRACTICES_REVIEW.md  BEST_PRACTICES_REVIEW_EPSILON.md  BEST_PRACTICES_REVIEW_SUMMARY.txt  BEST_PRACTICES_TECHNICAL_FINDINGS.md  CLAUDE.md  CODEBASE_QUALITY_ANALYSIS.md  CODE_ANALYSIS_README.md  CODE_REVIEW_SUMMARY.md  CODE_REVIEW_VERIFICATION.md  CONFTEST_IMPROVEMENTS_SUMMARY.md  CONSOLIDATED_REFACTORING_ANALYSIS.md  CONSOLIDATION_QUICK_REFERENCE.md  DEPLOYMENT_READY_SUMMARY.md  DISPATCHER_ANALYSIS_SUMMARY.txt  FINAL_BASEDPYRIGHT_ERRORS_FIX.md  FINDINGS_WITH_REFERENCES.md  IMPLEMENTATION_PLAN_PART1.md  IMPLEMENTATION_PLAN_PART2_ORIGINAL.md  IMPLICIT_STRING_CONCAT_FIX_SUMMARY.md  KNOWN_ISSUES.md  (+290 more)
BB/shotbot/: .coverage.Gab-ROG.3269.XLfWQAWx  .coverage.Gab-ROG.52758.XnyzGWqx.c  .coveragerc  .gitignore  .isort.cfg  =0.46  ACTION_PLAN_IMPLEMENTATION_STATUS.md  ACTION_PLAN_STATUS.md  CACHE_ISOLATION_FIX.md  CACHE_REFACTORING_PERFORMANCE_ANALYSIS.md  CLAUDE.md  COVERAGE_IMPROVEMENTS_SUMMARY.md  CRASH_FIX_SUMMARY.md  CRITICAL_FIXES_COMPLETE_SUMMARY.md  CRITICAL_FIXES_DETAILED_PLAN.md  CUSTOM_LAUNCHER_IMPLEMENTATION.md  DELEGATE_CONSOLIDATION_COMPLETE.md  DELEGATE_INTEGRATION_VERIFIED.md  DO_NOT_DELETE.md  DO_NOT_DELETE_FILES_MODIFIED.md  DO_NOT_DELETE_TEST_SUITE_PLAN.md  EXR_THUMBNAILING_FIXES_COMPLETE.md  EXR_THUNDERING_HERD_FIX.md  EXR_THUNDERING_HERD_FIX_COMPLETE.md  FD_INHERITANCE_FIX.md  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_TEST_REPORT.md  FINAL_VALIDATION_REPORT.md  FIXES_APPLIED_2025_08_15.md  IMMEDIATE_COVERAGE_IMPROVEMENT_PLAN.md  IMPLEMENTATION_PLAN_AMENDED.md  IMPLEMENTATION_PROGRESS.md  IMPORT_CHAIN_ANALYSIS.md  IMPROVEMENT_SUMMARY.md  INCREMENTAL_CACHING_PLAN.md  INTEGRATION_EXAMPLE.md  INTEGRATION_FIX_PLAN.md  INTEGRATION_FIX_SUMMARY.md  INTEGRATION_TEST_FIX_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  (+505 more)
BB/shotbot/.github/workflows/: tests.yml
BB/shotbot/.serena/: project.yml
BB/shotbot/.serena/memories/: code_style.md  suggested_commands.md  task_completion_checklist.md
BB/shotbot/archive/: README.md
BB/shotbot/archive/verification_2025_10_30/: ARCHIVE_STATUS.md  TASK_3_3_SIGNAL_FLOW_DIAGRAM.md
BB/shotbot/archive_2025_08_25/: cache_manager_legacy.py  enhanced_cache.py  fix_all_docstring_issues.py  fix_all_imports_final.py  fix_all_test_issues.py  fix_docstring_syntax.py  fix_docstrings_final.py  fix_final_12_errors.py  fix_final_imports.py  fix_last_10_files.py  fix_multiline_strings.py  fix_pytest_imports_final.py  fix_remaining_imports.py  fix_remaining_test_issues.py  fix_type_errors.py  main_window.py.backup  notification_demo.py  notification_examples.py  pattern_cache.py  performance_monitor.py  process_pool_manager.py.bak  profile_scene_finder.py  pytest.ini.backup  threede_scene_finder.py.backup
BB/shotbot/cache/: __init__.py  cache_validator.py  failure_tracker.py  memory_manager.py  shot_cache.py  storage_backend.py  threede_cache.py  thumbnail_loader.py  thumbnail_manager.py  thumbnail_processor.py  thumbnail_processor_optimized.py  unified_cache.py
BB/shotbot/controllers/: __init__.py  launcher_controller.py  settings_controller.py  threede_controller.py
BB/shotbot/dev-tools/: README.md  apply_logging_mixin.py  check_python311_compat.py  check_test_antipatterns.py  profile_startup_performance.py  regex_optimization_summary.py  run_thread_safety_tests.py  thumbnail_bottleneck_profiler.py
BB/shotbot/docs/: CONFIG_VALIDATION.md  NUKE_PLATE_WORKFLOW.md  SIMPLE_VS_COMPLEX_NUKE_LAUNCH.md
BB/shotbot/docs/refactoring_history/: COMPREHENSIVE_AGENT_REPORT.md  UNIFIED_TESTING_GUIDE_DO_NOT_DELETE.md
BB/shotbot/examples/: custom_launcher_integration.py
BB/shotbot/launcher/: ERROR_HANDLING.md  __init__.py  config_manager.py  models.py  process_manager.py  repository.py  result_types.py  validator.py  worker.py
BB/shotbot/test_venv/: pyvenv.cfg
BB/shotbot/tests/: README.md  THREAD_SAFETY_FIXES.md  __init__.py  conftest.py  conftest_type_safe.py  pyrightconfig.json  reliability_fixtures.py  test_cache_serialization.py  test_cache_write_locking.py  test_cache_write_race.py  test_doubles.py  test_doubles.py.backup  test_doubles.py.bak  test_doubles_extended.py  test_doubles_library.py  test_doubles_previous_shots.py  test_final_pipeline_validation.py  test_helpers.py  test_parametrization_examples.py  test_process_pool_race.py  test_shot_extraction_standalone.py  test_shot_processing_pipeline.py  test_simple_lock.py  test_subprocess_no_deadlock.py  test_type_safe_patterns.py  verify_enhancements.py
BB/shotbot/tests/advanced/: README.md  __init__.py  test_chaos_engineering.py  test_contract_validation.py  test_fuzzing.py  test_load_stress.py  test_mutation_strategies.py  test_mutation_testing.py  test_performance_regression.py  test_performance_regression_original.py  test_property_based.py  test_quality_patterns.py  test_snapshot.py
BB/shotbot/tests/examples/: test_best_practices_demo.py
BB/shotbot/tests/fixtures/: __init__.py  paths.py  test_doubles.py
BB/shotbot/tests/helpers/: synchronization.py
BB/shotbot/tests/integration/: __init__.py  conftest.py  test_async_workflow_integration.py  test_button_launcher_integration.py  test_cache_integration.py  test_caching_workflow.py  test_concurrent_launching_integration.py  test_concurrent_stress_integration.py  test_cross_component_integration.py  test_dependency_injection.py  (+48 more)
BB/shotbot/tests_backup_20250819_135502/: conftest.py  conftest_qt_mocked.py.disabled
BB/shotbot/ui/: main_window_menus.py  main_window_signals.py  main_window_ui.py
BB/shotbot/venv_py311/: pyvenv.cfg
(+918 files in other folders)
