[project]
name = "shotbot"
version = "1.0.0"
requires-python = ">=3.11"

[tool.basedpyright]
# Check all Python files in the project (no include list = check everything)
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv/**",
    "venv/**",
    "test_venv/**",
    "tests/**",
    "docs/**",
    "archive/**",
    "BB/**",
    ".git/**",
    ".github/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    ".hypothesis/**",
    "htmlcov/**",
    "encoded_releases/**",
    "examples/**",
    ".post-commit-output/**",
    "dev-tools/**",
    "wrapper/**",
    "PyMPEG.py",
    "conversion_controller.py",
    "process_monitor.py",
    "settings_panel.py",
    "main_window_refactored.py",
    "file_list_widget.py",
    "process_manager.py",
    "progress_tracker.py",
    "codec_helpers.py",
    "*_backup.py",
    "test_*.py",
    "screenshot_*.py",
    "logging_config.py",
    # Utility/maintenance scripts (not part of main application)
    "fix_*.py",
    "run_*.py",
    "verify_*.py",
    "bundle_app.py",
    "decode_app.py",
    "recreate_vfx_structure.py",
    "capture_vfx_structure.py",
    "take_screenshot.py"
]

pythonVersion = "3.11"
typeCheckingMode = "strict"

reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUndefinedVariable = "warning"
reportImplicitStringConcatenation = false
reportUnsafeMultipleInheritance = false
reportUnusedCallResult = "error"
reportImplicitOverride = "warning"
# Qt-specific adjustments (PySide6 type stub limitations)
reportUnannotatedClassAttribute = "information"  # Signal annotations with ClassVar[Signal] recommended
reportUnusedFunction = "warning"  # Keep enabled; only false positives with autoconnect patterns
reportAny = "information"  # Reduces noise from Qt's broad Any in stubs while keeping visibility

[tool.ruff]
# Target Python 3.11+
target-version = "py311"

# Line length to match Black (88 is standard)
line-length = 88

# Enable auto-fixing by default
fix = true
show-fixes = true

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".hypothesis",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
    "dev-tools",
]

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt (f-string conversion)
    "PERF",   # perflint
    "RUF",    # Ruff-specific rules
]

# Ignore these specific rules
ignore = [
    # Style choices
    "E501",    # line-too-long (let formatter handle it)
    "E203",    # whitespace-before-punctuation (conflicts with Black)

    # Type annotation flexibility
    "ANN401",  # any-type (Any is useful in generic code)

    # Import placement
    "E402",    # module-level-import-not-at-top-of-file (sometimes needed for Qt apps)
    "TC003",   # typing-only-standard-library-import (prefer consistency)

    # Qt-specific patterns
    "SLF001",  # private-member-access (common in Qt testing and subclassing)
    "ARG002",  # unused-method-argument (Qt callbacks often have unused args)
    "N802",    # function-name-should-be-lowercase (Qt methods must be camelCase)
    "N815",    # variable-in-class-scope-should-not-be-mixedcase (Qt properties must be mixedCase)

    # Lazy imports (intentional for circular import avoidance and performance)
    "PLC0415", # import-outside-top-level (used for lazy loading and circular import avoidance)

    # Complexity rules (design decisions - would require significant refactoring)
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "C901",    # complex-structure

    # Exception handling (allow practical patterns)
    "TRY002",  # create-own-exception (generic exceptions acceptable in tests)
    "TRY003",  # raise-vanilla-args (vanilla exceptions are often fine)
    "TRY004",  # prefer-type-error (ValueError/Exception acceptable for type issues)
    "TRY300",  # try-consider-else (not always clearer)
    "BLE001",  # blind-except (sometimes needed for cleanup)
    "TRY400",  # error-instead-of-exception (Error is fine in Python 3)

    # Boolean arguments (common in GUI apps)
    "FBT001",  # boolean-type-hint-positional-argument
    "FBT002",  # boolean-default-value-positional-argument

    # Simplification preferences (explicit code is often clearer)
    "SIM102",  # collapsible-if (nested ifs can be more readable)
    "SIM105",  # suppressible-exception (try/except/pass is explicit)
    "FBT003",  # boolean-positional-value-in-call

    # Print statements (useful for debugging and CLI output)
    "T201",    # print (we use print intentionally in some places)

    # Logging (f-strings are readable)
    "G004",    # logging-f-string (f-strings are fine for our use case)

    # Docstrings (we have our own standards)
    "D",       # pydocstyle (too opinionated, we follow our own style)

    # Magic values (sometimes clearer than named constants)
    "PLR2004", # magic-value-comparison

    # Performance (micro-optimizations not worth it)
    "PERF203", # try-except-in-loop (rarely a real issue)
]

# Allow these specific patterns
[tool.ruff.lint.per-file-ignores]
# Tests have different standards
"tests/**/*.py" = [
    "S101",    # assert (asserts are the point of tests)
    "ARG001",  # unused-function-argument (pytest fixtures)
    "PLR2004", # magic-value-comparison (test data can be literal)
    "PLR0913", # too-many-arguments (pytest fixtures often need many params)
    "S108",    # hardcoded-temp-file (fine in tests)
    "DTZ001",  # call-datetime-without-tzinfo (tests don't need tz)
    "B018",    # useless-expression (testing expressions)
]

# Config files can have magic values
"**/config*.py" = [
    "PLR2004", # magic-value-comparison
]

# Scripts and utilities
"*.py" = []

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["shotbot"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pyupgrade]
# Keep modern Python syntax
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
# Max complexity (default is 10, we're a bit more lenient)
max-complexity = 15

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test execution options
addopts = [
    "--strict-markers",     # Fail on unknown markers
    "-ra",                  # Show all test summary info
    "-q",                   # Quiet mode - focus on failures
    "--durations=20",       # Show slowest 20 tests
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:coverage_html",
    "-p", "no:rerunfailures",
    "-p", "no:xvfb",
    "--dist=worksteal",     # Load balancing for varying test durations (UNIFIED_TESTING_V2.MD)
    # Serial execution by default for Qt stability and leak detection
    # Override with `pytest tests/ -n 2` for faster development
    # Override with `pytest tests/ -n auto` for maximum parallelism
    "-n", "0",
]

# Timeout configuration (2 minutes per test to catch hanging tests)
timeout = 120
timeout_method = "thread"

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Test markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "qt: Tests requiring Qt GUI",
    "hardware: Tests requiring specific hardware",
    "slow: Tests that take a long time to run (>1 second)",
    "fast: Tests under 100ms",
    "perf: Performance comparison tests (may be skipped in CI/WSL)",
    "threading: Tests for thread safety and concurrency",
    "thread_safety: Tests for thread safety",
    "concurrent: Tests for concurrent/threading behavior",
    "regression: Regression tests for specific bugs",
    "flaky: Tests that may fail intermittently (should be investigated and fixed)",
    "critical: Critical/high priority tests",
    "performance: Tests for performance",
    "enforce_unique_connections: Tests with UniqueConnection enforcement for signal safety",
]