[project]
name = "pympeg"
version = "2.0.0"
description = "PySide6-based GUI application for batch video conversion using FFmpeg"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["ffmpeg", "video", "conversion", "gui", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = [
    "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "basedpyright>=1.10.0",
]

[project.scripts]
pympeg = "main_window_refactored:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "tests/",
    "venv/",
    ".venv/",
    "__pycache__/",
    "*.pyc",
    ".git/",
    ".github/",
    "htmlcov/",
    "coverage_html/",
    ".coverage",
    ".pytest_cache/",
    ".ruff_cache/",
    "BB/",  # Exclude shotbot subdirectory
]

# Pytest Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "qt: Tests requiring Qt GUI",
    "hardware: Tests requiring specific hardware",
    "slow: Tests that take a long time to run",
]

# Ruff Configuration
[tool.ruff]
target-version = "py38"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific rules
    "TCH", # flake8-type-checking
    "A",   # flake8-builtins (prevent shadowing builtins)
    "PIE", # flake8-pie (misc lints)
    "RET", # flake8-return
    "PLC", # Pylint conventions
    "PLE", # Pylint errors
    "PLW", # Pylint warnings
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Function calls in argument defaults
    "N802",    # Function name should be lowercase (Qt uses camelCase)
    "N803",    # Argument name should be lowercase (Qt uses camelCase)
    "N806",    # Variable in function should be lowercase (Qt uses camelCase)
    "RET504",  # Unnecessary assignment before return (sometimes clearer)
    "PLW0603", # Global statement (sometimes needed for caching)
    "PLC0415", # Import not at top-level (intentional lazy imports to avoid circular deps)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"PyMPEG.py" = ["ALL"]  # Ignore legacy file completely
"tests/**/*.py" = [
    "N802", "N803",  # Test functions can have any name style
    "PLR2004",  # Magic values OK in tests
    "PT004",  # Fixtures don't always return
    "PT011",  # pytest.raises too broad is OK in tests
    "A001", "A002",  # Shadowing builtins OK in test fixtures
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Basedpyright Configuration
[tool.basedpyright]
include = [
    "main_window_refactored.py",
    "conversion_controller.py",
    "settings_panel.py",
    "process_monitor.py",
    "process_manager.py",
    "progress_tracker.py",
    "codec_helpers.py",
    "file_list_widget.py",
    "config.py",
    "logging_config.py",
    "output_buffer.py",
    "ui_update_manager.py",
]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/venv",
    "tests/",
    "PyMPEG.py",  # Exclude legacy monolithic file
    "BB/",  # Exclude shotbot subdirectory
]
typeCheckingMode = "recommended"  # Upgraded from "standard"
pythonVersion = "3.8"
pythonPlatform = "Linux"

# Error reporting - stricter settings
reportMissingImports = true
reportMissingTypeStubs = false  # Too noisy for Qt
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportUntypedFunctionDecorator = false  # Qt decorators often untyped
reportUntypedClassDecorator = false
reportPrivateUsage = true
reportConstantRedefinition = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportImplicitStringConcatenation = false  # Common in Qt stylesheets

# Coverage Configuration
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "__pycache__/*",
    "PyMPEG.py",
    "BB/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
