[project]
name = "shotbot"
version = "0.1.0"
description = "VFX shot browser and application launcher"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.0.0",
    "psutil>=5.9.0",
    "pillow>=10.0.0",
    "Jinja2>=3.0.0",
    # OpenEXR and Imath are optional - graceful fallback if not available
    "numpy>=1.24.0",
    "olefile>=0.46",
    "typing_extensions>=4.0.0",  # Python 3.11 compatibility (@override)
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.0.0",
    "pytest-timeout>=2.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
    "basedpyright>=1.31.0",
    "pytest-xdist>=3.8.0",
    "pytest-rerunfailures>=16.1",
]

[tool.uv]
package = false  # Application, not a library

[tool.ruff]
# Same as Black
line-length = 88
indent-width = 4

# Python version (matches actual requirement: Python 3.11+)
target-version = "py311"

# Exclude common directories
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "venv",
    ".venv",
    "venv_py311",
    "test_venv",
    "archived",
    "copy",
]

[tool.ruff.lint]
# Enable comprehensive rule set including type-checking
select = [
    "E", "F",  # pycodestyle, Pyflakes
    "I",       # isort
    "UP",      # pyupgrade - modern type syntax
    "TCH",     # flake8-type-checking - TYPE_CHECKING imports
    "ANN",     # flake8-annotations - missing annotations
    "B",       # flake8-bugbear - catches common bugs
    "C4",      # flake8-comprehensions - better list/dict comprehensions
    "PIE",     # flake8-pie - misc lints for better practices
    "PT",      # flake8-pytest-style - pytest best practices
    "SIM",     # flake8-simplify - simplification suggestions
    "RUF",     # Ruff-specific rules - additional checks

    # High-value additions (Option 1: Balanced)
    "ASYNC",   # flake8-async - async/await best practices
    "PERF",    # Perflint - performance anti-patterns (critical for VFX)
    "FURB",    # refurb - modernization suggestions
    "FLY",     # flynt - prefer f-strings
    "RET",     # flake8-return - return statement improvements

    # Option A: Aggressive quality checks
    "Q",       # flake8-quotes - quote consistency
    "PLW",     # Pylint warnings - catches real bugs (with exceptions)
]

# Ignore rules that don't fit this codebase
ignore = [
    "E501",    # Line length (let formatter handle it)
    "ANN401",  # Allow Any in *args and **kwargs (common pattern)
    "TC003",   # Allow standard library imports outside TYPE_CHECKING (Path used at runtime)

    # Qt-specific patterns
    "B008",    # Function call in default argument (Qt patterns like QModelIndex())
    "B007",    # Unused loop variable (common in Qt event handling)

    # VFX/Personal tool patterns
    "RUF001",  # Ambiguous unicode characters (emojis used intentionally for UX)
    "RUF003",  # Ambiguous unicode in comments (emojis in docstrings)

    # Intentional patterns
    "PIE790",  # Unnecessary placeholder (used for unpacking with explicit intent)
    "SIM105",  # Use contextlib.suppress (prefer explicit try/except for clarity)
    "SIM117",  # Multiple with statements (prefer clarity over condensing)
    "SIM102",  # Collapsible if (prefer clarity over nesting depth)

    # Test-specific
    "PT006",   # Parametrize names as tuple (pytest accepts both formats)
    "PT018",   # Composite assertion (pytest-specific, multiple assertions OK)

    # Performance exceptions
    "PERF203", # try-except in loop (sometimes necessary for robustness)

    # Return statement exceptions
    "RET504",  # Unnecessary assign before return (often clearer)

    # Pylint warning exceptions
    "PLW0603", # global-statement (Qt/VFX patterns need globals)
    "PLW2901", # redefined-loop-name (sometimes intentional for clarity)
    "PLW0602", # global-variable-not-assigned (false positives)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["PySide6.QtCore.QObject"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "PLR2004", # Magic value in comparison (test values are often magic)
    "PERF401", # Manual list comprehension (readability over micro-optimization in tests)
    "PERF102", # Dict iterator (clarity in tests)
    "RET503",  # Missing explicit return (test fixtures can be less strict)
    "SIM103",  # Needless bool (explicit conditions in tests are clearer)
]
"shotbot_mock.py" = ["T201"]  # Allow print in mock entry point
"**/test_*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "PERF401", "PERF102", "RET503", "SIM103"]
"dev-tools/**" = ["ALL"]  # Development utilities, not production code
"recreate_*.py" = ["ALL"]  # Development scripts
"capture_*.py" = ["ALL"]   # Development scripts
"run_mock_*.py" = ["ALL"]  # Mock testing scripts

[tool.ruff.format]
# Use single quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Format docstrings
docstring-code-format = true

[tool.pytest.ini_options]
# Test discovery paths
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Default command-line options
addopts = [
    # Reporting and output
    "--strict-markers",
    "--tb=short",
    "-ra",

    # Performance settings
    "--maxfail=5",
    "--durations=20",

    # Disable unnecessary plugins
    "-p", "no:xvfb",
]

# Test markers with clear categories
markers = [
    # Speed categories (mutually exclusive)
    "fast: Fast tests that complete in <100ms",
    "slow: Slow tests that take >1s",

    # Test types
    "unit: Unit tests (should generally be fast)",
    "integration: Integration tests (may interact with filesystem)",
    "performance: Performance benchmarks",
    "benchmark: Performance benchmark tests (using pytest-benchmark)",

    # Environment requirements
    "qt: Tests requiring Qt event loop",
    "gui: GUI tests requiring display",
    "gui_mainwindow: Tests that create MainWindow (must run in single worker)",
    "xdist_group(name): Tests that must run in the same worker (for xdist)",

    # Safety categories for parallel execution
    "integration_safe: Integration tests safe to parallelize",
    "integration_unsafe: Integration tests that must run serially",
    "qt_heavy: Tests creating complex Qt widgets (MainWindow)",

    # Quality categories
    "critical: Critical path tests that must pass",
    "stress: Stress tests with high resource usage",
    "quality: Code quality tests",
    "contract: Contract/API validation",
    "mutation: Mutation testing",
    "snapshot: Snapshot testing",
    "thread_safety: Thread safety and concurrency tests",

    # Skip conditions
    "skip_in_ci: Skip in CI environments",
    "skip_in_wsl: Skip in WSL environments",
]

# Console output style
console_output_style = "progress"

# Logging configuration
log_cli = false
log_cli_level = "WARNING"
log_file_level = "DEBUG"

# JUnit XML configuration (for CI)
junit_suite_name = "shotbot"
junit_duration_report = "call"

# Warning filters
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",

    # Qt signal/slot warnings that should FAIL tests
    # These indicate code issues that need fixing
    # Format: action:message:category:module:lineno
    "error:Failed to disconnect:RuntimeWarning:thread_safe_worker",
    "error:Failed to disconnect:RuntimeWarning:controllers.*",

    # Allow other RuntimeWarnings (but log them)
    "default::RuntimeWarning",
]

# Temporary path retention
tmp_path_retention_count = 3
tmp_path_retention_policy = "failed"

# Assertion truncation limits
truncation_limit_lines = 20
truncation_limit_chars = 1000

# Empty parameter set behavior
empty_parameter_set_mark = "skip"

# Strict xfail behavior (XPASS fails the suite)
xfail_strict = false

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*_test.py",
    "*/venv*/*",
    "*/.pytest_cache/*",
    "*/archived/*",
    "*/dev-tools/*",
    "shotbot_mock.py",          # Mock entry point
    "run_mock_*.py",            # Mock utilities
    "recreate_*.py",            # Dev utilities
    "verify_*.py",              # Dev utilities
    "capture_*.py",             # Dev utilities
]
branch = true                  # Enable branch coverage
parallel = true                # For parallel test execution

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",          # Abstract methods don't need coverage
    "@overload",                # Type overloads don't need coverage
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.basedpyright]
# Type checking mode - "strict" for maximum type safety
typeCheckingMode = "strict"

# Python version (matches minimum requirement: Python 3.11+)
pythonVersion = "3.11"

# Virtual environment (uv-managed)
venvPath = "."
venv = ".venv"

# By default, checks all Python files in the project
# Use exclude to skip specific directories

# Exclude virtual environments, caches, test directories, and dev tools
exclude = [
    "venv/**",
    ".venv/**",
    "venv_py311/**",
    "test_venv/**",
    "**/__pycache__",
    "**/.pytest_cache",
    ".git/**",
    "build/**",
    "dist/**",
    "tests/**",
    "archived/**",
    "dev-tools/**",  # Development utilities, not production code
    "examples/**",   # Example code, not production code
    "test_*.py",     # Test scripts in root directory
    "*_test.py",     # Alternative test script naming
    "run_mock_*.py", # Mock testing scripts
    "verify_*.py",   # Verification scripts
    "capture_*.py",  # Data capture scripts
    "recreate_*.py", # Recreation scripts
]

# Stub path for type stubs
stubPath = "."

# Error reporting levels - balanced for production code
reportMissingImports = "warning"
reportMissingTypeStubs = "none"  # Third-party libraries often lack stubs
reportUnnecessaryTypeIgnoreComment = "error"
reportIgnoreCommentWithoutRule = "error"
reportPrivateUsage = "error"  # ← UPGRADED: warning → error

# Stricter type checking for better code quality
reportUnknownMemberType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"
reportUnknownLambdaType = "error"  # ← UPGRADED: warning → error

# Decorator and class type safety
reportUntypedFunctionDecorator = "error"  # ← UPGRADED: warning → error
reportUntypedClassDecorator = "error"     # ← UPGRADED: warning → error
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"

# Code quality checks
reportCallInDefaultInitializer = "error"  # ← UPGRADED: warning → error
reportImplicitStringConcatenation = "none"  # Allow implicit concatenation
reportMissingSuperCall = "error"  # ← UPGRADED: warning → error
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "error"

# Type compatibility
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportOverlappingOverload = "error"

# Qt/PySide6 specific suppressions
reportUnsafeMultipleInheritance = "none"  # Qt mixins use proper super() MRO chain
reportUnusedCallResult = "none"  # Qt signal connections return values are often unused
reportUnannotatedClassAttribute = "none"  # Qt Signal() class attributes
reportImplicitOverride = "none"  # Qt event handlers implicitly override
reportUnusedParameter = "none"  # Qt slots/callbacks often have unused parameters
reportUnreachable = "none"  # Allow defensive checks for edge cases (headless environments, etc.)
